# llm_agent

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FRONTEND_BACKEND_ANALYSIS.md  README.md  REFACTORING_PLAN.md  TOOLS_IMPLEMENTATION_PLAN.md  ai_log.md  bug.md  build.bat  config.json  doc.md  feedback.md  next_steps.md  run_agent.bat  streaming_feature_plan.md  streaming_implementation_instructions.md
.shdata_21052026/: file_indexer_meta.json  index_meta.json
bkp.shdata/E__my_proj_llm_agent/: file_indexer_meta.json  index_meta.json
bkp.shdata/sessions/: sess_iij0py0j3.json  sess_iij0py0j3.md  sess_olukbm3t8.json  sess_olukbm3t8.md
doc/: REFACTORING_PLAN.md  REFACTORING_PLAN2.md
frontend/: 1var.html  2var.html  404.html  README.md  REFACTORING_PLAN.md  agent.html  chat.html  chat.js  doc.html  doc.md  index.html  main.js  new.html  settings.html  style.css
frontend/css/: chat.css  main.css  style.css  variables.css
frontend/doc/: 00_общий_план.md  01_архитектура.md  02_ui_ux.md  03_websocket.md  04_session.md  05_messages.md  06_widgets.md  07_errors.md  API_Integration.md  README.md  README_TESTING.md  START_HERE.md  SUMMARY.md  frontend_report.md
frontend/js/: agent.js  chat.js  doc.js  index.js  index_new.js  input-handler.js  input.js  main.js  message.js  session.js  socket.js  storage.js  streaming-indicator.js  streaming.js  token-accumulator.js  widget.js  widgets.js
frontend/js/agent/: input-handler.js  message-renderer.js  session-manager.js  widget-renderer.js  ws-manager.js
frontend/js/core/: session.js  socket.js
frontend/js/ui/: message.js  widget.js
frontend/tests/integration/: chat.test.js
frontend/tests/unit/: message.test.js  session.test.js  socket.test.js  widget.test.js
src/: ApiHandlers.cpp  ApiHandlers.h  AssistantResponse.h  AssistantRole.cpp  AssistantRole.h  CodeParser.cpp  CodeParser.h  Config.cpp  Config.h  ContextIndexer.cpp  ContextIndexer.h  EmbeddingClient.cpp  EmbeddingClient.h  FileWatcher.cpp  FileWatcher.h  LLMProvider.h  Logger.cpp  Logger.h  OpenAIProvider.cpp  OpenAIProvider.h  SessionManager.cpp  SessionManager.h  ThreadPool.cpp  ThreadPool.h  UserSession.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
src/AssistantRoleHelper/: MessageBuilder.cpp  MessageBuilder.h  QueryProcessor.cpp  QueryProcessor.h
src/ContextIndexerHelper/: ChunkerStrategy.cpp  ChunkerStrategy.h  FileIndexer.cpp  FileIndexer.h  FileReader.cpp  FileReader.h  IndexManager.cpp  IndexManager.h  Searcher.cpp  Searcher.h
src/tools/: ApplyDiffTool.cpp  ApplyDiffTool.h  CodeSearchTool.cpp  CodeSearchTool.h  EditFileTool.cpp  EditFileTool.h  ExecuteShellCommandTool.cpp  ExecuteShellCommandTool.h  FileGlobSearchTool.cpp  FileGlobSearchTool.h  FinalAnswerTool.cpp  FinalAnswerTool.h  GetDateTimeTool.cpp  GetDateTimeTool.h  GetSystemInfoTool.cpp  GetSystemInfoTool.h  GitHubSearchTool.cpp  GitHubSearchTool.h  GrepSearchTool.cpp  GrepSearchTool.h  ITool.h  ListDirectoryTool.cpp  ListDirectoryTool.h  OpenUrlTool.cpp  OpenUrlTool.h  ReadFileTool.cpp  ReadFileTool.h  ReadUrlTool.cpp  ReadUrlTool.h  ToolManager.cpp  ToolManager.h  WebSearchTool.cpp  WebSearchTool.h  WriteFileTool.cpp  WriteFileTool.h
